add more button.

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,9 @@
     <input type="text" id="data_str" value="[[240, 240], [220, 240], [220, 240], [220, 220], [260, 220], [260, 260], [180, 260], [180, 180], [300, 180], [300, 300], [140, 300], [140, 140], [300, 140]]" />
     <input type="button" id="btn" value="draw" />
     <input type="button" id="btn_gen_points" value="gen rand points" />
+    <input type="button" id="btn_solve_1" value="solve 1st question" />
+    <input type="button" id="btn_solve_2" value="solve 2nd question" />
+    <input type="button" id="btn_reset_data" value="reset data to unsolve" />
   </p>
   <script src="{{ url_for("static", filename="./ext/jquery-1.9.1.min.js") }}"></script>
   <script src="{{ url_for("static", filename="./ext/processing-1.4.1.min.js") }}"></script>
