reset to unsolved worked

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
   <canvas id="mycanvas"></canvas>
   <p>
-    <input type="text" id="data_str" value="{{ default_data }}" />
+    <textarea style="resize:none" id="data_str" rows="3" cols="64"> {{ default_data }} </textarea>
     <input type="button" id="btn" value="draw" />
     <input type="button" id="btn_gen_points" value="gen rand points" />
     <input type="button" id="btn_solve_1" value="solve 1st question" />
