--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@
     <input type="button" id="btn_solve_1" value="solve 1st question" />
     <input type="button" id="btn_solve_2" value="solve 2nd question" />
   </div>
+  <div>
+    <input type="button" id="btn_draw_mst" value="draw Min Spanning Tree" />
+    <input type="button" id="btn_solve_2_mst" value="solve 2nd by MST" />
+  </div>
   <span style="display:none" id="data_str_backup">{{ default_data }}</span>
   <span style="display:none" id="canvas_width">{{ canv_width }}</span>
   <span style="display:none" id="canvas_height">{{ canv_height }}</span>
