fix text on button

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
     <input type="button" id="btn_reset_data" value="reset data to unsolve" />
   </div>
   <div>
-    <input type="button" id="btn_solve_1" value="solve 1st question" />
-    <input type="button" id="btn_solve_2" value="solve 2nd question" />
+    <input type="button" id="btn_solve_1" value="gen unicursal from lb" />
+    <input type="button" id="btn_solve_2" value="gen unicursal" />
   </div>
   <div>
     <input type="button" id="btn_draw_mst" value="draw Min Spanning Tree" />
