hide button do not work yet.

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
   </div>
   <div>
     <input type="button" id="btn_draw_mst" value="draw Min Spanning Tree" />
-    <input type="button" id="btn_solve_2_mst" value="solve 2nd by MST" />
+    <input type="button" id="btn_solve_2_mst" value="solve 2nd by MST" style="display:none" />
   </div>
   <span style="display:none" id="data_str_backup">{{ default_data }}</span>
   <span style="display:none" id="canvas_width">{{ canv_width }}</span>
