--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,12 @@
     <textarea style="resize:none" id="data_str" rows="3" cols="64"> {{ default_data }} </textarea>
   </div>
   <div>
-    <input type="button" id="btn" value="draw" />
     <input type="button" id="btn_gen_points" value="gen rand points" />
     <input type="button" id="btn_reset_data" value="reset data to unsolve" />
   </div>
   <div>
-    <input type="button" id="btn_solve_1" value="gen unicursal from lb" />
-    <input type="button" id="btn_solve_2" value="gen unicursal" />
+    <input type="button" id="btn_solve_1" value="unicursal from lb" />
+    <input type="button" id="btn_solve_2" value="unicursal" />
   </div>
   <div>
     <input type="button" id="btn_draw_mst" value="draw Min Spanning Tree" />
