--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   </div>
   <div>
     <input type="button" id="btn_gen_points" value="gen rand points" />
-    <input type="button" id="btn_reset_data" value="reset data to unsolve" />
+    <input type="button" id="btn_reset_data" value="reset data" />
   </div>
   <div>
     <input type="button" id="btn_solve_1" value="unicursal from lb" />
