修改模板，去掉未使用的 js 库，引入体积较小的 processing api 替代完整的 processing。

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,7 @@
   <span style="display:none" id="canvas_height">{{ canv_height }}</span>
 
   <script src="{{ url_for("static", filename="./ext/jquery-1.9.1.min.js") }}"></script>
-  <script src="{{ url_for("static", filename="./ext/processing-1.4.1.min.js") }}"></script>
-  <script src="{{ url_for("static", filename="./ext/underscore-min.js") }}"></script>
+  <script src="{{ url_for("static", filename="./ext/processing-1.4.1-api.min.js") }}"></script>
   <script src="{{ url_for("static", filename="./ext/coffee-script.js") }}"></script>
 
   <script type="text/coffeescript" src="{{ url_for("static", filename="./script.js") }}">
